# standup-aggregator-example

./: .env.example  .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-07-standup-aggregator.md
docs/superpowers/specs/: 2026-05-07-standup-aggregator-design.md
src/standup_aggregator/: __init__.py  __main__.py  cli.py  client.py  config.py  discover.py  fetch.py  fs.py  models.py  progress.py  queries.py  render.py  timeparse.py
tests/: test_config.py  test_discover.py  test_fetch_helpers.py  test_fs.py  test_render.py  test_timeparse.py
