[project]
name = "standup-aggregator"
version = "0.1.0"
description = "Extract Parabol Stand-Up data to markdown files. A demonstrator for Parabol Personal Access Tokens."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Jordan Husney", email = "jordan@parabol.co" }]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "python-dateutil>=2.8",
    "python-dotenv>=1.0",
]

[project.scripts]
standup-aggregator = "standup_aggregator.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/standup_aggregator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
